--- a/it.seda.security.cas/src/main/resources/it/seda/security/cas/i18n/ui/uilabel.properties
+++ b/it.seda.security.cas/src/main/resources/it/seda/security/cas/i18n/ui/uilabel.properties
@@ -11,3 +11,4 @@ login.content.message=Per ragioni di sicurezza, quando hai terminato di accedere
 login.content.languages=Lingue
 login.content.languages.english=English
 login.content.languages.italiano=Italiano
+logout.message.loggedout= Log out effettuato con successo!
