change password ed alcune correzioni

--- a/it.seda.security.cas/src/main/resources/it/seda/security/cas/i18n/ui/uilabel.properties
+++ b/it.seda.security.cas/src/main/resources/it/seda/security/cas/i18n/ui/uilabel.properties
@@ -6,7 +6,12 @@ application.footer.powered=Powered by Seda Servizi di Autenticazione Centralizza
 login.form.title=Inserisci le credenziali
 login.form.username=Utente
 login.form.password=Password
+login.form.change.password=Change password
 login.form.button=entra
+login.changepassword.username.notEmpty=Username deve essere valorizzato
+login.changepassword.username.notExists=Utenza non riconosciuta
+login.form.change.password.back=Back to login...
+login.form.customerId.undefined=Il codice cliente è sconosciuto
 login.content.message=Per ragioni di sicurezza, quando hai terminato di accedere ai tuoi servizi che richiedono autenticazione, esegui il Log Out ed Esci dal browser web!
 login.content.languages=Lingue
 login.content.languages.english=English
@@ -16,4 +21,8 @@ login.exception.messages.BadCredentialsException= Credenziali non corrette
 login.exception.messages.CredentialsExpiredException=Credenziali scadute
 login.exception.messages.LockedException=Account bloccato
 login.exception.messages.DisabledException=Account disabilitato
+#Validator change password
+login.changepassword.notEqualsNewOld=Le password non coincidono
+login.changepassword.notValidUser=Username non valido
+login.changepassword.notValidPassword=La password inserita non può coincidere con le due ultime password usate.
 
